refactor: 해당 유저의 모든 review 내역 반환해주는 코드 수정